Finished co site and changed pseudo pratice

--- a/html_css/lesson_4/pseudo_practice/index.html
+++ b/html_css/lesson_4/pseudo_practice/index.html
@@ -145,11 +145,13 @@
       </main>
 
       <footer>
-        <ul>
-          <li><a id="twitter" href="">Twitter</a></li>
-          <li><a id="facebook" href="">Facebook</a></li>
-          <li><a id="instagram" href="">Instagram</a></li>
-        </ul>
+        <nav>
+          <ul>
+            <li><a id="twitter" href="">Twitter</a></li>
+            <li><a id="facebook" href="">Facebook</a></li>
+            <li><a id="instagram" href="">Instagram</a></li>
+          </ul>
+        <nav>
       </footer>
     </div>
   </body>
