team modals and slideshow jquery

--- a/html_css/lesson_4/company_site/team.html
+++ b/html_css/lesson_4/company_site/team.html
@@ -27,21 +27,51 @@
               <img src="assets/images/img_chris.jpg" alt="Chris">
               Chris
             </a>
+            <div class="modal">
+              <a class="close" href="#">Close</a>
+              <img src="assets/images/img_chris.jpg" alt="Chris">
+              <h3>Chris</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal_layer"></div>
           </li><!--
           --><li>
-            <a href="#"><img src="assets/images/img_kasper.jpg" alt="Kasper"><span>Kasper<span></a>
+            <a href="#">
+              <img src="assets/images/img_kasper.jpg" alt="Kasper"><span>Kasper<span>
+            </a>
+            <div class="modal">
+              <a class="close" href="#">Close</a>
+              <img src="assets/images/img_kasper.jpg" alt="Kasper">
+              <h3>Kasper</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal_layer"></div>
           </li><!--
           --><li>
             <a href="#">
               <img src="assets/images/img_kevin.jpg" alt="Kevin">
               Kevin
             </a>
+            <div class="modal">
+              <a class="close" href="#">Close</a>
+              <img src="assets/images/img_kevin.jpg" alt="Kevin">
+              <h3>Kevin</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal_layer"></div>
           </li><!--
           --><li>
             <a href="#">
               <img src="assets/images/img_louis.jpg" alt="Louis">
               Louis
             </a>
+            <div class="modal">
+              <a class="close" href="#">Close</a>
+              <img src="assets/images/img_Louis.jpg" alt="Louis">
+              <h3>Louis</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal_layer"></div>
           </li>
         </ul>
       </article>
@@ -58,5 +88,7 @@
         </ul>
       </nav>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script type="text/javascript" src="modal.js"></script>
   </body>
 </html>
